--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 </div>
             </div>
             <div>
-                <img src="./img/img3.png" alt=App "The Seafood">
+                <img src="./img/img3.png" alt=App Seafood>
                 <div>
-                    <h3>Resturant</h3>
+                    <h3>Resturant Seafood</h3>
                     <p>Design</p>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div>
-                <img src="./img/img9.png" alt=Computer with words- "Growing Business">
+                <img src="./img/img9.png" alt=Computer with words- Growing Business>
                 <div>
                     <h3>Growing Business</h3>
                     <p>App</p>
