--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
             <div>
                 <img src="./img/WebStudio.png" alt="WebStudio logo">
             </div>
-            <div>
-                <a href="#">Студія</a>
-                <a  style="color: aqua;" href="#">Портфоліо</a>
-                <a href="#">Контакти</a>
+            <div class="header_links">
+                <a class="header_links" href="#">Студія</a>
+                <a  class="header_links_second" href="#">Портфоліо</a>
+                <a class="link" href="#">Контакти</a>
             </div>
         </section>
         <section>
-            <a href="#">info@devstudio.com</a>
-            <a href="#">+38 096 111 11 11</a>
+            <a class="header_contacts" href="#">info@devstudio.com</a>
+            <a class="header_contacts" href="#">+38 096 111 11 11</a>
         </section>
    </header> 
    <main>
