--- a/index.html
+++ b/index.html
@@ -14,96 +14,96 @@
             <div class="header_links">
                 <a class="header_links" href="#">Студія</a>
                 <a  class="header_links_second" href="#">Портфоліо</a>
-                <a class="link" href="#">Контакти</a>
+                <a class="header_links" href="#">Контакти</a>
             </div>
         </section>
-        <section>
-            <a class="header_contacts" href="#">info@devstudio.com</a>
-            <a class="header_contacts" href="#">+38 096 111 11 11</a>
+        <section class="header_contacts">
+            <a class="header_contacts--email" href="#">info@devstudio.com</a>
+            <a class="header_contacts--phonenumber" href="#">+38 096 111 11 11</a>
         </section>
    </header> 
    <main>
-        <section>
+        <section class="links_buttons">
             <div>
-                <a href="#">Усі</a>
+                <a class="links_buttons--higlightet" href="#">Усі</a>
             </div>
             <div>
-                <a href="#">Веб-сайти</a>
+                <a class="links_buttons--normal" href="#">Веб-сайти</a>
             </div>
             <div>
-                <a href="#">Додатки</a>
+                <a class="links_buttons--normal href="#">Додатки</a>
             </div>
             <div>
-                <a href="#">Дизайн</a>
+                <a class="links_buttons--normal href="#">Дизайн</a>
             </div>
             <div>
-                <a href="#">Маркетинг</a>
+                <a class="links_buttons--normal href="#">Маркетинг</a>
             </div>
         </section>
         <section>
-            <div>
+            <div class="card">
                 <img src="./img/img.png" alt="Website">
                 <div>
-                    <h3 >TecnoCrack</h3>
-                    <p>Website</p>
+                    <h3 class="card_title">TecnoCrack</h3>
+                    <p class="card_text">Website</p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <img src="./img/img2.png" alt="Design">
                 <div>
-                    <h3>Poster New Orlean vs. Golden State Warriors</h3>
-                    <p>Design</p>
+                    <h3 class="card_title">Poster New Orlean vs. Golden State Warriors</h3>
+                    <p class="card_text">Design</p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <img src="./img/img3.png" alt=App Seafood>
                 <div>
-                    <h3>Resturant Seafood</h3>
-                    <p>Design</p>
+                    <h3 class="card_title">Resturant Seafood</h3>
+                    <p class="card_text">Design</p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <img src="./img/img4.png" alt=Headphones>
                 <div>
-                    <h3>Project- Prime</h3>
-                    <p>Marketing</p>
+                    <h3 class="card_title">Project- Prime</h3>
+                    <p class="card_text">Marketing</p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <img src="./img/img5.png" alt=Boxes>
                 <div>
-                    <h3>Project- Boxes</h3>
-                    <p>App</p>
+                    <h3 class="card_title">Project- Boxes</h3>
+                    <p class="card_text">App</p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <img src="./img/img6.png" alt=Computer with opened site>
                 <div>
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Web-site</p>
+                    <h3 class="card_title">Inspiration has no Borders</h3>
+                    <p class="card_text">Web-site</p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <img src="./img/img7.png" alt=Book.>
                 <div>
-                    <h3>Edition "Limited edition"</h3>
-                    <p>Design</p>
+                    <h3 class="card_title">Edition "Limited edition"</h3>
+                    <p class="card_text">Design</p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <img src="./img/img8.png" alt=Tag>
                 <div>
-                    <h3>Project- "LAB"</h3>
-                    <p>Marketing</p>
+                    <h3 class="card_title">Project- "LAB"</h3>
+                    <p class="card_text">Marketing</p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <img src="./img/img9.png" alt=Computer with words- Growing Business>
                 <div>
-                    <h3>Growing Business</h3>
-                    <p>App</p>
+                    <h3 class="card_title">Growing Business</h3>
+                    <p class="card_text">App</p>
                 </div>
-            </div>
+            </div class="card">
         </section>
    </main>
    <footer style="background-color: dimgray;">
