--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body style="background-color: rgb(175, 211, 134)">
-   <header>
-        <section>
+<body>
+   <header class="header">
+        
+        <section class="header_container">
             <div>
                 <img src="./img/WebStudio.png" alt="WebStudio logo">
             </div>
-            <div class="header_links">
-                <a class="header_links" href="#">Студія</a>
-                <a  class="header_links_second" href="#">Портфоліо</a>
-                <a class="header_links" href="#">Контакти</a>
+            <div class="header_container--links">
+                <a class="header_container--links_link" href="#">Студія</a>
+                <a  class="header_container--links_second" href="Portfolio">Портфоліо</a>
+                <a class="header_container--links_link" href="#">Контакти</a>
             </div>
         </section>
         <section class="header_contacts">
@@ -40,73 +42,73 @@
                 <a class="links_buttons--normal href="#">Маркетинг</a>
             </div>
         </section>
-        <section>
-            <div class="card">
+        <section class="card_container">
+            <div class="card_container--card">
                 <img src="./img/img.png" alt="Website">
                 <div>
-                    <h3 class="card_title">TecnoCrack</h3>
-                    <p class="card_text">Website</p>
+                    <h3 class="card_container--title">TecnoCrack</h3>
+                    <p class="card_container--text">Website</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card_container--card">
                 <img src="./img/img2.png" alt="Design">
                 <div>
-                    <h3 class="card_title">Poster New Orlean vs. Golden State Warriors</h3>
-                    <p class="card_text">Design</p>
+                    <h3 class="card_container--title">Poster New Orlean vs. Golden State Warriors</h3>
+                    <p class="card_container--text">Design</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card_container--card">
                 <img src="./img/img3.png" alt=App Seafood>
                 <div>
-                    <h3 class="card_title">Resturant Seafood</h3>
-                    <p class="card_text">Design</p>
+                    <h3 class="card_container--title">Resturant Seafood</h3>
+                    <p class="card_container--text">Design</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card_container--card">
                 <img src="./img/img4.png" alt=Headphones>
                 <div>
-                    <h3 class="card_title">Project- Prime</h3>
-                    <p class="card_text">Marketing</p>
+                    <h3 class="card_container--title">Project- Prime</h3>
+                    <p class="card_container--text">Marketing</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card_container--card">
                 <img src="./img/img5.png" alt=Boxes>
                 <div>
-                    <h3 class="card_title">Project- Boxes</h3>
-                    <p class="card_text">App</p>
+                    <h3 class="card_container--title">Project- Boxes</h3>
+                    <p class="card_container--text">App</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card_container--card">
                 <img src="./img/img6.png" alt=Computer with opened site>
                 <div>
-                    <h3 class="card_title">Inspiration has no Borders</h3>
-                    <p class="card_text">Web-site</p>
+                    <h3 class="card_container--title">Inspiration has no Borders</h3>
+                    <p class="card_container--text">Web-site</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card_container--card">
                 <img src="./img/img7.png" alt=Book.>
                 <div>
-                    <h3 class="card_title">Edition "Limited edition"</h3>
-                    <p class="card_text">Design</p>
+                    <h3 class="card_container--title">Edition "Limited edition"</h3>
+                    <p class="card_container--text">Design</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card_container--card">
                 <img src="./img/img8.png" alt=Tag>
                 <div>
-                    <h3 class="card_title">Project- "LAB"</h3>
-                    <p class="card_text">Marketing</p>
+                    <h3 class="card_container--title">Project- "LAB"</h3>
+                    <p class="card_container--text">Marketing</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card_container--card">
                 <img src="./img/img9.png" alt=Computer with words- Growing Business>
                 <div>
-                    <h3 class="card_title">Growing Business</h3>
-                    <p class="card_text">App</p>
+                    <h3 class="card_container--title">Growing Business</h3>
+                    <p class="card_container--text">App</p>
                 </div>
             </div class="card">
         </section>
    </main>
-   <footer style="background-color: dimgray;">
+   <footer class="footer_contacts">
      <section>
          <img src="./img/WebStudio.png" alt="logo">
      </section>
