--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <a  class="header_container--links_second" href="Portfolio">Портфоліо</a>
                 <a class="header_container--links_link" href="#">Контакти</a>
             </div>
-        </section>
-        <section class="header_contacts">
-            <a class="header_contacts--email" href="#">info@devstudio.com</a>
-            <a class="header_contacts--phonenumber" href="#">+38 096 111 11 11</a>
+            <div>
+                <a class="header_container--email" href="#">info@devstudio.com</a>
+                <a class="header_container--phonenumber" href="#">+38 096 111 11 11</a>
+            </div>
         </section>
    </header> 
    <main>
