--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
          <img src="./img/WebStudio.png" alt="logo">
      </section>
     <section>
-        <div> <p>М. Київ, пр-т Лесі Українки</p></div>
-        <div> <a href="#">info@example.com</a></div>
-        <div> <p style="color: darkgrey;">+38 096 111 11 11</p></div>
+        <div> <p class="footer_contacts--white">М. Київ, пр-т Лесі Українки</p></div>
+        <div> <a class="footer_contacts--grey" href="#">info@example.com</a></div>
+        <div> <p class="footer_contacts--grey">+38 096 111 11 11</p></div>
     </section>
    </footer>
 </body>
